# lamoda-tags

./: .gitignore  Bags_labels_to_etalon.ipynb  Etalon_tags.ipynb  README.md  app.py  lamoda_reviews_sampled.csv  lamoda_reviews_sampled_with_pull_tags.csv  lamoda_reviews_sampled_with_tags.csv  pyproject.toml  tag_mappings.csv  tag_pulls_best.csv  tag_pulls_raw.csv  test_examples.csv
datasets/: accs_dataset2100.csv  bags_dataset500.csv  beauty_dataset1800.csv  clothes_dataset1800.csv  shoes_dataset2100.csv
experiments/: All_berts__.ipynb
loras_learning/: accs,_Bert_multilabel_lamoda.ipynb  beauty,_Bert_multilabel_lamoda_ipynb_.ipynb  clothes,_Bert_multilabel_lamoda.ipynb  shoes,_Bert_multilabel_lamoda.ipynb
model/: __init__.py  build_category_priors.py  config.py  data.py  lora_predict.py  losses.py  predict.py  rerank.py  train.py
scripts/: download_hf_model.py  download_lora_models.py  gen_best_tags.py  gen_tag_pulls.py  gen_tags.py  sample.py  update_reviews_with_pull_tags.py
