[project]
name = "lamoda-tags"
version = "0.1.0"
description = "Tag generation and prediction for Lamoda products based on reviews"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Data processing
    "pandas>=2.0",
    "numpy>=1.24",
    
    # ML/DL
    "scikit-learn>=1.3",
    "torch>=2.0",
    "transformers>=4.35",
    "datasets>=2.14",
    "accelerate>=0.24",
    
    # LLM API (for tag generation scripts)
    "openai>=1.0",
    "httpx>=0.25",
    
    # Utilities
    "tqdm>=4.66",
    
    # Apps
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.scripts]
train-tags = "model.train:main"
predict-tags = "model.predict:main"

[tool.uv]
index-url = "https://pypi.org/simple"
